removed text-align center to fix placement of dagTree

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,6 @@ body {
 	font-family: 'Titillium Web', sans-serif;
   overflow-y: hidden;
 	margin: 30px;
-	text-align: center;
 }
 
 #login-org,
@@ -40,7 +39,7 @@ body {
 		letter-spacing: 2px;
 	}
 
-	text-align: center;
+	// text-align: center;
 	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
